Constructor y avance main

--- a/Agenda-App/Agenda.html
+++ b/Agenda-App/Agenda.html
@@ -68,7 +68,7 @@
                 />
                 <div class="valid-feedback">Correcto!</div>
                 <div class="invalid-feedback">Introduzca una fecha válida</div>
-              <button id="btnAdd2" type="button" class="btn btn-primary">
+              <button id="btnAgregar" type="button" class="btn btn-primary">
                 Agregar
               </button>
             </form>
