--- a/Agenda-App/Agenda.html
+++ b/Agenda-App/Agenda.html
@@ -47,11 +47,11 @@
                 <div class="invalid-feedback">Este campo es obligatorio</div>
               </div>
               <div class="form-group">
-                <label for="email">Correo</label>
+                <label for="correo">Correo</label>
                 <input
                   type="email"
                   class="form-control"
-                  id="email"
+                  id="correo"
                   placeholder="cgarcia47@ucol.mx"
                   required
                 />
@@ -60,11 +60,11 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="birthday">Fecha de Nacimiento</label>
+                <label for="cumpleanios">Fecha de Nacimiento</label>
                 <input 
                 type="date" 
                 class="form-control" 
-                id="birthday" 
+                id="cumpleanios" 
                 />
                 <div class="valid-feedback">Correcto!</div>
                 <div class="invalid-feedback">Introduzca una fecha válida</div>
@@ -80,7 +80,6 @@
                   <thead>
                     <tr>
                       <th>Nombre del Contacto</th>
-                      <th>Nombre del alumno</th>
                       <th>Correo</th>
                       <th>Fecha de nacimiento</th>
                       <th>Edad</th>
