--- a/Agenda-App/Agenda.html
+++ b/Agenda-App/Agenda.html
@@ -18,13 +18,11 @@
       <h1>Lista de contactos </h1>
       <p></p>
       <div class="dropdown">
-            <button class="btn btn-success dropdown-toggle" type="button" id="btnEdadNombre" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Orden
-            </button>
-            <div class="dropdown-menu" aria-labelledby="btnEdadNombre">
-              <a class="dropdown-item" href="#">Edad</a>
-              <a class="dropdown-item" href="#">Nombre</a>
-            </div>
+               <select id= "Tipo">
+              <option>selecciona una opcion</option>
+              <option>Nombre</option>
+              <option>Edad</option>
+            </select>
           </div>
     </div>
     <div class="container-fluid">
@@ -88,6 +86,17 @@
                   <tbody></tbody>
                 </table>
               </div>
+              <div class="row my-3">
+                <table id="numRegis" class="table ml-2">
+                  <tbody>
+                    <tr>
+                      <td>Número de contactos:</td>
+                      <td></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
       </div>
       <!-- Row -->
     </div>
