--- a/Agenda-App/Agenda.html
+++ b/Agenda-App/Agenda.html
@@ -58,19 +58,39 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="cumpleanios">Fecha de Nacimiento</label>
+                <label for="cumpleanios">Número de teléfono</label>
                 <input 
-                type="date" 
+                type="number" 
                 class="form-control" 
-                id="cumpleanios" 
+                id="celular" 
                 />
                 <div class="valid-feedback">Correcto!</div>
-                <div class="invalid-feedback">Introduzca una fecha válida</div>
+                <div class="invalid-feedback">Introduzca un número telefónico valido</div>
+                <div class="form-group">
+                    <label for="cumpleanios">Fecha de Nacimiento</label>
+                    <input 
+                    type="date" 
+                    class="form-control" 
+                    id="cumpleanios" 
+                    />
+                    <div class="valid-feedback">Correcto!</div>
+                    <div class="invalid-feedback">Introduzca una fecha válida</div>
               <button id="btnAgregar" type="button" class="btn btn-primary">
                 Agregar
               </button>
             </form>
           </div>
+          </div>
+          <div class="row my-3">
+              <table id="numRegis" class="table ml-2">
+                <tbody>
+                  <tr>
+                    <td>Número de contactos:</td>
+                    <td></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
 
         </div>
         <div class="col-md-8">
@@ -79,21 +99,12 @@
                     <tr>
                       <th>Nombre del Contacto</th>
                       <th>Correo</th>
+                      <th>Número Telefonico</th>
                       <th>Fecha de nacimiento</th>
                       <th>Edad</th>
                     </tr>
                   </thead>
                   <tbody></tbody>
-                </table>
-              </div>
-              <div class="row my-3">
-                <table id="numRegis" class="table ml-2">
-                  <tbody>
-                    <tr>
-                      <td>Número de contactos:</td>
-                      <td></td>
-                    </tr>
-                  </tbody>
                 </table>
               </div>
             </div>
